update project: change function: shorten code and add adapter 2